--- a/authcats/app/views/layouts/application.html.erb
+++ b/authcats/app/views/layouts/application.html.erb
@@ -2,6 +2,22 @@
 <html>
   <head>
     <title>NinetyNineCats</title>
+    <% if logged_in? %>
+      <%= current_user.user_name %>
+      <form action="<%=session_url%>" method="POST" >
+        <input type="hidden" name="_method" value="DELETE">
+        <input type="submit" value="Logout">
+
+      </form>
+    <% else %>
+      <form action="<%=new_session_url%>" method="GET" >
+          <input type="submit" value="Login">
+      </form>
+      <form action="<%=new_user_url%>" method="GET" >
+          <input type="submit" value="Sign up!">
+      </form>
+    <% end %>
+
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
