--- a/authcats/app/views/cats/_req_tr.html.erb
+++ b/authcats/app/views/cats/_req_tr.html.erb
@@ -2,23 +2,28 @@
   <td><%= req.start_date %></td>
   <td><%= req.end_date %></td>
   <td>
-    <% if req.pending? %>
-        <form action="<%= approve_cat_rental_request_url(req) %>" method="post">
-          <input
-            type="hidden"
-            name="authenticity_token"
-            value="<%= form_authenticity_token %>">
-          <input type="submit" value="Approve">
-        </form>
-        <form action="<%= deny_cat_rental_request_url(req) %>" method="post">
-          <input
-            type="hidden"
-            name="authenticity_token"
-            value="<%= form_authenticity_token %>">
-          <input type="submit" value="Deny">
-        </form>
+    <% if req.cat.owner == current_user %>
+      <% if req.pending? %>    
+          <form action="<%= approve_cat_rental_request_url(req) %>" method="post">
+            <input
+              type="hidden"
+              name="authenticity_token"
+              value="<%= form_authenticity_token %>">
+            <input type="submit" value="Approve">
+          </form>
+          <form action="<%= deny_cat_rental_request_url(req) %>" method="post">
+            <input
+              type="hidden"
+              name="authenticity_token"
+              value="<%= form_authenticity_token %>">
+            <input type="submit" value="Deny">
+          </form>
+      <% else %>
+        <%= req.status %>
+      <% end %>
     <% else %>
       <%= req.status %>
     <% end %>
   </td>
+  <td><%= req.requester.user_name %></td>
 </tr>
