--- a/authcats/app/views/cats/show.html.erb
+++ b/authcats/app/views/cats/show.html.erb
@@ -21,8 +21,10 @@
     <th>Start Date</th>
     <th>End Date</th>
     <th>Status</th>
+    <th>Requester</th>
   </tr>
   <% @cat.rental_requests.order('start_date').each do |req| %>
     <%= render 'req_tr', req: req %>
   <% end %>
 </table>
+<a href="<%= new_cat_rental_request_url %>"> Create rental request! </a>
