--- a/authcats/app/views/cats/show.html.erb
+++ b/authcats/app/views/cats/show.html.erb
@@ -23,7 +23,7 @@
     <th>Status</th>
     <th>Requester</th>
   </tr>
-  <% @cat.rental_requests.order('start_date').each do |req| %>
+  <% @cat.rental_requests.includes(:requester).order('start_date').each do |req| %>
     <%= render 'req_tr', req: req %>
   <% end %>
 </table>
