--- a/authcats/app/views/cats/show.html.erb
+++ b/authcats/app/views/cats/show.html.erb
@@ -14,6 +14,8 @@
 </table>
 
 <a href="<%= edit_cat_url(@cat) %>">Edit <%= @cat.name %></a>
+<br>
+<a href="<%= cats_url %>">All Cats</a>
 
 <h2>Rental Requests</h2>
 <table>
